--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13,17 +13,41 @@
   src: url(/assets/fonts/VyDisplay-Medium.woff2) format("woff2");;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+a,
+a:hover,
+a:visited,
+a:active,
+a:focus {
+  color: #00957a;
+  line-height: 1.5em;
+}
+
 body {
+  margin: 0;
+  padding: 0;
   width: 100%;
-  font-size: 16px;
-  font-family: "Vhy Pirate", sans-serif;
+  font-size: 18px;
+  position: relative;
+  font-family: "Vhy Pirate Light", sans-serif;
 }
 
 h1 {
-  width: 100%;
+  width: 70%;
   font-size: 50px;
   margin-top: 7rem;
   margin-bottom: 5rem;
+}
+
+@media screen and (max-width: 992px) {
+  h1 {
+    width: 100%;
+    font-size: 24px;
+    margin-top: 1rem;
+  }
 }
 
 .d-flex {
@@ -47,29 +71,51 @@ h1 {
   max-height: 696px;
 }
 
-p {
+.post {
   width: 100%;
   margin: 20px 0;
   padding: 10px 6px;
   text-align: center;
 }
 
-a,
-a:hover,
-a:visited,
-a:active,
-a:focus {
-  color: #00957a;
+.post.text {
+  width: 50%;
+  font-size: 20px;
+  text-align: left;
   line-height: 1.5em;
 }
 
-.large {
-  font-size: 24px;
-  font-family: "Vhy Pirate Display";
+.inner-post {
+  font-size: 20px;
+  margin-top: 5rem;
+  text-align: left;
+  margin-left: 8rem;
 }
 
-h2.large {
-  font-size: 60px;
+.large {
+  width: 70%;
+  margin: 4rem 0;
+  padding: 1rem;
+  font-size: 34px;
+  font-family: "Vhy Pirate Light";
+}
+
+@media screen and (max-width: 992px) {
+  .post,
+  .large,
+  .inner-post {
+    margin: 0;
+    width: 100%;
+    text-align: left;
+  }
+
+  .large {
+    font-size: 24px;
+  }
+
+  .inner-post {
+    margin-top: 3rem;
+  }
 }
 
 .text-center {
@@ -80,28 +126,31 @@ h2.large {
   font-weight: normal;
 }
 
-footer {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@media screen and (max-width: 992px) {
-  p {
-    max-width: 100%;
-  }
-}
-
-
 header {
   display: flex;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
   margin: 1.5rem;
   padding: 20px 0;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-box-align: center;
+  justify-content: space-between;
+}
+
+footer {
+  width: 100%;
+  padding: 1rem 4rem;
+  color: #fff;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  background: #383e42;
+  justify-content: space-between;
+}
+
+footer a,
+footer a:visited,
+footer a:focus {
+  color: #fff;
 }
 
 .nav {
@@ -112,14 +161,26 @@ header {
 .nav ul {
   display: flex;
   list-style: none;
+}
 
+@media screen and (max-width: 992px) {
+  .nav ul {
+    flex-wrap: wrap;
+  }
 }
 
 .nav ul li {
   display: flex;
+  margin: 0 2rem;
   position: relative;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 992px) {
+  .nav ul li {
+    margin: 0;
+  }
 }
 
 .nav ul li:hover {
@@ -133,12 +194,13 @@ header {
 .nav ul li a {
   color: #000;
   font-size: 1.25rem;
-  margin-right: 3rem;
+  margin-right: 0;
+  padding-right: 3rem;
   text-decoration: none;
 }
 
 .nav ul li .arrow-right {
   right: 0;
   position: absolute;
-  transition: right ease-in-out .25s;
+  transition: right ease-in-out .15s;
 }
